...
                        <barButtonItem key="backBarButtonItem" title="Map" id="Gik-4F-pcK"/>
                        <barButtonItem key="leftBarButtonItem" title="Reset" id="8tq-1h-CB8">
                            <connections>
                                <action selector="cancelButton:" destination="VA0-qc-6lI" id="Fi0-yW-LXL"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" id="f3D-n3-dcS">
                            <connections>
                                <segue destination="4Ws-Sp-SGe" kind="show" identifier="confirmSegue" id="c1q-bM-w0T"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <constraint firstItem="MiY-0L-3qn" firstAttribute="top" secondItem="q6W-Eh-B0n" secondAttribute="bottom" id="In2-Kn-Hdb"/>
                            <constraint firstItem="q6W-Eh-B0n" firstAttribute="leading" secondItem="jUg-yS-v7O" secondAttribute="leading" id="Opd-Lq-Ut0"/>
                            <constraint firstAttribute="trailing" secondItem="q6W-Eh-B0n" secondAttribute="trailing" id="TnY-3x-E0a"/>
                            <constraint firstItem="q6W-Eh-B0n" firstAttribute="top" secondItem="ld2-jZ-lqk" secondAttribute="bottom" id="Vep-t0-rFb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Confirm Ride Details" id="lEP-YC-fqG">
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Send Request" id="5z0-Zc-kxK">
                            <connections>
                                <action selector="sendButtonPressed:" destination="4Ws-Sp-SGe" id="el0-Qa-ezS"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
