...
                                self.navigationBar.prompt = "Set Dropoff Location"
                            }
                            else {
                                marker.title = "Dropoff"
                                self.dropOffAddress = destination
                                self.nextButton.enabled = true
                                self.navigationBar.prompt = "Press Next to Continue"
                            }
                            marker.snippet = place.name
                            marker.map = self.googleMapView
                            self.googleMapView?.selectedMarker = marker
                            self.numberOfPins += 1
                        }
...
